--- a/js/templates/app.handlebars
+++ b/js/templates/app.handlebars
@@ -6,8 +6,10 @@
 		<li>Html5Boilerplate</li>
 		<li>jQuery</li>
 		<li>BackBone</li>
+		<li>localstorage</li>
 		<li>RequireJS</li>
 		<li>Thorax</li>
+		<li>Handlebars</li>
 		<li>Modernizr</li>
 		<li>Bootstrap</li>
 		<li>FontAwesome</li>
