--- a/js/templates/app.handlebars
+++ b/js/templates/app.handlebars
@@ -7,6 +7,8 @@
 		<li>jQuery</li>
 		<li>BackBone</li>
 		<li>localstorage</li>
+		<li>Underscore</li>
+		<li>Lo-Dash</li>
 		<li>RequireJS</li>
 		<li>Thorax</li>
 		<li>Handlebars</li>
